--- a/Menu_Side_Reveal/styles.css
+++ b/Menu_Side_Reveal/styles.css
@@ -1,5 +1,116 @@
-#test{
-	background:black;
-	width:200px;
-	height:200px;
+body{
+	width:100vw;
+	height:calc(100vh - 50px);
+	margin:25px 0 25px 0;
+	font-family:'Century Gothic', sans-serif;
+	font-size:.9em;
 }
+
+a{
+	cursor:pointer;
+}
+
+.title{
+	font-size:1.2em;
+}
+
+header{
+	display:flex;
+	padding:0 25px 5px 25px;
+	width:calc(100% - 50px);
+	flex-direction:row;
+	border-bottom:solid .012px #bebec1;
+	justify-content: space-between;
+	flex-shrink:0;
+	flex-grow:0;
+}
+
+#logo{
+	width:400px;
+	display:block;
+}
+
+#menu{
+	width:15%;
+	height:100%;
+	display:flex;
+	align-items:center;
+	justify-content: space-between;
+}
+
+.menu_item{
+	width:25px;
+	height:25px;
+	padding-right:10px;
+}
+
+
+
+.last{
+	margin:0;
+	padding:0;
+	justify-content: flex-end;
+}
+
+.icon{
+	stroke: black;
+	stroke-width:3;
+	paint-order: stroke;
+}
+
+.social{
+	display:none;
+}
+
+/****page content****/
+
+#content{
+	width:calc(100% - 50px);
+	height:calc(100% - 65px);
+	padding:25px;
+	display:flex;
+}
+
+#slide_wrapper{
+	display:block;
+	width:85%;
+	height:100%;
+}
+
+#slide_container{
+	width:100%;
+	height:100%;
+	display:block;
+}
+
+.slide{
+	object-fit: cover;
+	width:100%;
+	height:100%;
+}
+
+#info_wrapper{
+	padding:0 0 0 25px;
+	display:flex;
+	flex-direction:column;
+	width:calc(15% - 25px);
+	height:100%;
+	text-align:left;
+	justify-content: space-between;
+}
+
+.info_header{
+	border-bottom:solid .012px #bebec1;
+	text-transform: uppercase;
+}
+
+.attrib{
+	padding-top:10px;
+}
+
+#production{
+	height:100%;
+	display:block;
+}
+
+
