--- a/On_Click_Explode/styles.css
+++ b/On_Click_Explode/styles.css
@@ -25,6 +25,8 @@ header{
 	justify-content: space-between;
 	flex-shrink:0;
 	flex-grow:0;
+	position:absolute;
+	z-index:10;
 }
 
 #logo{
@@ -32,16 +34,25 @@ header{
 	display:block;
 }
 
+.st1{
+	fill: white;
+}
+
 #menu{
 	width:15%;
 	height:100%;
 	display:flex;
 	align-items:center;
-	justify-content: flex-end;
+	justify-content: space-between;
 }
 
 #hamburger{
 	display:block;
+}
+
+#ham_svg{
+	stroke:white;
+	stroke-width:3;
 }
 
 .menu_item{
@@ -62,10 +73,6 @@ header{
 	paint-order: stroke;
 }
 
-.stl{
-	fill: black;
-}
-
 .social{
 	
 }
@@ -73,18 +80,23 @@ header{
 /****page content****/
 
 #content{
-	width:calc(100% - 50px);
-	height:calc(100% - 60px);
-	padding:25px;
+	position:absolute;
+	top:0;
+	bottom:0;
+	right:0;
+	left:0;
+	width:100%;
+	height:100%;
+	/*padding:25px;*/
 	display:flex;
+	z-index:9;
 }
 
 #slide_wrapper{
 	position:relative;
 	display:block;
-	width:85%;
+	width:100%;
 	height:100%;
-
 }
 
 .corner{
@@ -135,12 +147,12 @@ header{
 
 #info_wrapper{
 	padding:0 0 0 25px;
-	display:flex;
 	flex-direction:column;
 	width:calc(15% - 25px);
 	height:100%;
 	text-align:left;
 	justify-content: space-between;
+	display:none;
 }
 
 .info_header{
@@ -211,4 +223,13 @@ header{
 
 #social_links{
 	padding-bottom:25px;
+}
+
+/*****explode on slide click***/
+
+
+
+.reduced{
+	width: calc(100% - 50px) !important;
+	height: calc(100% - 60px) !important;
 }
