--- a/On_Click_Explode/styles.css
+++ b/On_Click_Explode/styles.css
@@ -43,7 +43,7 @@ header{
 	height:100%;
 	display:flex;
 	align-items:center;
-	justify-content: space-between;
+	justify-content: flex-end;
 }
 
 #hamburger{
@@ -90,6 +90,7 @@ header{
 	/*padding:25px;*/
 	display:flex;
 	z-index:9;
+	cursor:crosshair;
 }
 
 #slide_wrapper{
@@ -97,6 +98,22 @@ header{
 	display:block;
 	width:100%;
 	height:100%;
+}
+
+#slide_wrapper:before{
+	content:'';
+	position:absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	width:100%;
+	height:100%;
+	background-image:linear-gradient(to bottom, rgba(0, 0, 0, .4), transparent 10%);
+}
+
+#content.reduced #slide_wrapper:before{
+	background-image:unset;
 }
 
 .corner{
@@ -227,7 +244,13 @@ header{
 
 /*****explode on slide click***/
 
+#slides{
+	display:none;
+}
 
+#slide_reveal{
+	stroke-width:7px;
+}
 
 .reduced{
 	width: calc(100% - 50px) !important;
