--- a/Year_Sorted/fonts.css
+++ b/Year_Sorted/fonts.css
@@ -4,3 +4,9 @@
 	font-weight:normal;
 	font-style:normal;
 }
+@font-face {
+	font-family: 'Century Gothic';
+	src: url('CenturyGothic_Bold.ttf') format('truetype');
+	font-weight:bold;
+	font-style:normal;
+}
