--- a/Year_Sorted/styles.css
+++ b/Year_Sorted/styles.css
@@ -362,3 +362,14 @@ margin-top:0;
 	right:0;
 	bottom:0;
 }
+
+/****Archive Menu*****/
+
+.thumnail_caption{
+	padding-left:5px;
+	margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-style:italic;
+}
